--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,8 @@
     "ext-exif": "*",
     "ext-mbstring": "*",
     "ext-openssl": "*",
-    "ext-gd": "*"
+    "ext-gd": "*",
+    "phpgangsta/googleauthenticator": " dev-master"
   },
   "require-dev": {
     "phpunit/phpunit": "^5.7.25"
